5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1793_1616.log
== TEST (2019-05-30 18:10:39) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")))
string=string.upper()
danodomago=string*v
print(dano do mago)
-- ERROR:
File "XXXX", line 6
    print(dano do mago)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:10:53) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")))
string=string.upper()
danodomago=string*v
print(danodomago)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:05) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")))
string=string.upper()
danodomago=string*v
print(danodomago)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:24:40) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")))
while(i<size[string].upper()):
	if(string=="GELO"):
		g=g+2
	if(string=="FOGO"):
		f=f+3
	if(string=="CHOQUE"):
		c=c+4
	if(string=="CONJURACAO"):
		co=co+8
	if(string=="ILUSAO"):
		il=il+10
dano=string*nivel
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:25:58) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")))
while(i<size[string].upper()):
	if(string=="GELO"):
		g=g+2
	if(string=="FOGO"):
		f=f+3
	if(string=="CHOQUE"):
		c=c+4
	if(string=="CONJURACAO"):
		co=co+8
	if(string=="ILUSAO"):
		il=il+10
dano=string*nivel
print(dano)
-- EXECUTION TIME:
0.410732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 4, in <module>
    while(i<size[string].upper()):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:29:31) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")))
g=0
f=0
c=0
co=0
il=0
while(i<size[string].upper()):
	if(string=="GELO"):
		g=g+2
	if(string=="FOGO"):
		f=f+3
	if(string=="CHOQUE"):
		c=c+4
	if(string=="CONJURACAO"):
		co=co+8
	if(string=="ILUSAO"):
		il=il+10
dano=string*nivel
print(dano)
-- EXECUTION TIME:
0.457745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 9, in <module>
    while(i<size[string].upper()):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:12) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
g=0
f=0
c=0
co=0
il=0
while(i<size[string].upper()):
	if(string=="GELO"):
		g=g+2
	if(string=="FOGO"):
		f=f+3
	if(string=="CHOQUE"):
		c=c+4
	if(string=="CONJURACAO"):
		co=co+8
	if(string=="ILUSAO"):
		il=il+10
dano=string*v1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:35:09) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
g=0
f=0
c=0
co=0
il=0
while(i<size[string].upper()):
	if(string=="GELO"):
		g=g+2
	if(string=="FOGO"):
		f=f+3
	if(string=="CHOQUE"):
		c=c+4
	if(string=="CONJURACAO"):
		co=co+8
	if(string=="ILUSAO"):
		il=il+10
dano=string*v1
print(dano)
-- EXECUTION TIME:
0.607303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 11, in <module>
    while(i<size[string].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:09) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
g=0
f=0
c=0
co=0
il=0
while(i<size[string].upper()):
	if(string=="GELO"):
		g=g+2
	if(string=="FOGO"):
		f=f+3
	if(string=="CHOQUE"):
		c=c+4
	if(string=="CONJURACAO"):
		co=co+8
	if(string=="ILUSAO"):
		il=il+10
dano=string*v1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:12) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.455285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:14) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.406626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:18) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:45:16) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(v1<size[string].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.445737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(v1<size[string].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:45:16) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(v1<size[string].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:45:34) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.42462
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:45:35) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:45:35) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.614787
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:26) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.499746
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:32) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.794074
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:33) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- EXECUTION TIME:
2.19092
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:33) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- EXECUTION TIME:
1.90728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:33) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- EXECUTION TIME:
1.04851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:33) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
i=i+1
dano=string*soma
print(dano)
-- EXECUTION TIME:
3.22702
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:30) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.524766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:34) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:36) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.647034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:37) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
1.58144
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:37) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
2.31261
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:37) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
1.8195
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:37) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
3.07541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.506527
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:07) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.673086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:07) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.599889
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1616/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:08) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.789649
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1616/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:08) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
1.56325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:08) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
2.03668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:55) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.363171
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:57) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
1.76526
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:57) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
0.702831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:57) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
2.9039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:57) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
2.07002
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:58) 
-- CODE:
from numpy import*
string=array(eval(input("digite o poder: ")))
v=array(eval(input("ieneso: ")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size[string]):
	if(string=="GELO"):
		soma=soma+(2*v[i])
	if(string=="FOGO"):
		soma=soma+(3*v[i])
	if(string=="CHOQUE"):
		soma=soma+(4*v[i])
	if(string=="CONJURACAO"):
		soma=soma+(8*v[i])
	if(string=="ILUSAO"):
		soma=soma+(10*v[i])
dano=string*soma
print(dano)
-- EXECUTION TIME:
2.38117
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1616/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
